--- a/ch01/index.html
+++ b/ch01/index.html
@@ -9,7 +9,7 @@
 		<div id="picframe">
 			<img src="images/furry_friend.jpg" alt="Our Furry Friend">
 		</div>
-		<script src="scripts/jquery-1.6.2.min.js"></script>
+		<script src="../common/jquery-1.6.2.min.js"></script>
 		<script src="scripts/my_script.js"></script>
 	</body>
 </html>
