--- a/ch02/index.html
+++ b/ch02/index.html
@@ -9,13 +9,12 @@
 			<h2>Jump for Joy Sale</h2>
 		</div>
 		<div id="main">
-			<div><img src="images/jump1.jpg"/></div>
-			<div><img src="images/jump2.jpg"/></div>
-			<div><img src="images/jump3.jpg"/></div>
-			<div><img src="images/jump4.jpg"/></div>
+			<div class="guess_box"><img src="images/jump1.jpg"/></div>
+			<div class="guess_box"><img src="images/jump2.jpg"/></div>
+			<div class="guess_box"><img src="images/jump3.jpg"/></div>
+			<div class="guess_box"><img src="images/jump4.jpg"/></div>
 		</div>
-		<script src="scripts/jquery-1.6.2.min.js"></script>
-		<script>
-		</script>
+		<script src="../common/jquery-1.6.2.min.js"></script>
+		<script src="scripts/my_script.js"></script>
 	</body>
 </html>
