--- a/ch04/index.html
+++ b/ch04/index.html
@@ -1,18 +1,18 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<title></title> 
+		<title>Our Menu</title> 
 		<link type="text/css" href="styles/my_style.css" rel="stylesheet" />
 	</head>
 	<body>
-		<div id="menu_wrapper">
-			<div class="topper">
+		<div class="menu_wrapper">
+			<header class="topper">
 				<h2>Our Menu</h2>
-				<ul>
-					<li class="nav"><button id="vegOn">Go Vegetarian</button></li>
-					<li class="nav"><button id="restoreMe">Restore Menu</button></li>
-				</ul>
-			</div>
+				<nav>
+					<button id="vegOn">Go Vegetarian</button>
+					<button id="restoreMe">Restore Menu</button>
+				</nav>
+			</header>
 			<div class="left_col">
 				<h4>Dinner Entrees</h4>
 				<ul class="menu_entrees">		
@@ -23,7 +23,8 @@
 							<li>salt</li>
 							<li>black pepper </li>
 						</ul>
-					</li><li>Roasted Trout
+					</li>
+					<li>Roasted Trout
 						<ul class="menu_list">
 							<li class="fish">grilled trout</li>
 							<li>mint</li>
@@ -34,7 +35,8 @@
 							<li>olive oil</li>
 							<li>potatoes </li>
 						</ul>
-					</li><li>Thai-style Halibut
+					</li>
+					<li>Thai-style Halibut
 						<ul class="menu_list">
 							<li>coconut milk</li>
 							<li class="fish">pan-fried halibut</li>
@@ -42,7 +44,8 @@
 							<li>early autumn vegetables</li>
 							<li>Thai spices </li>
 						</ul>
-					</li><li class="">Braised Delight
+					</li>
+					<li>Braised Delight
 						<ul class="menu_list">
 							<li class="meat">lamb shoulder</li>
 							<li class="veg_leaf">cipolinni onions</li>
@@ -52,7 +55,7 @@
 							<li>braising jus</li>
 						</ul>
 					</li>
-					<li class="">House Grilled Panini
+					<li>House Grilled Panini
 						<ul class="menu_list">
 							<li class="meat">proscuttio</li>
 							<li>provolone</li>
@@ -62,7 +65,7 @@
 							<li>shoestring fries </li>
 						</ul>
 					</li>
-					<li class="">House Slider
+					<li>House Slider
 						<ul class="menu_list">
 							<li>marinated eggplant</li>
 							<li>zucchini</li>
@@ -74,7 +77,7 @@
 							<li>goat cheese</li>
 						</ul>
 					</li>
-					<li class="">Southwest Slider
+					<li>Southwest Slider
 						<ul class="menu_list">
 							<li>whole chiles</li>
 							<li class="hamburger">Hamburger</li>
@@ -85,7 +88,7 @@
 							<li>Multi-grain roll</li>
 						</ul>
 					</li>
-					<li class="">Frittata
+					<li>Frittata
 						<ul class="menu_list">
 							<li class="meat">eggs</li>
 							<li>asiago, provolone, and romano cheeses</li>
@@ -97,14 +100,14 @@
 			<div class="right_col">
 				<h4>Soups and Sides</h4>
 				<ul class="menu_entrees">
-					<li class="">Coconut Soup
+					<li>Coconut Soup
 						<ul class="menu_list">
 							<li>coconut milk</li>
 							<li class="meat">chicken</li>
 							<li>vegetable broth</li>
 						</ul>
 					</li>
-					<li class="">Soup Du Jour
+					<li>Soup Du Jour
 						<ul class="menu_list">
 							<li class="meat">grilled steak</li>
 							<li>mushrooms</li>
@@ -112,7 +115,7 @@
 							<li>vegetable broth </li>
 						</ul>
 					</li>
-					<li class="">Hot and Sour Soup
+					<li>Hot and Sour Soup
 						<ul class="menu_list">
 							<li class="meat">roasted pork</li>
 							<li>carrots</li>
@@ -121,7 +124,7 @@
 							<li>vegetable Broth </li>
 						</ul>
 					</li>
-					<li class="">Stuffed Baked Potato
+					<li>Stuffed Baked Potato
 						<ul class="menu_list">
 							<li>potato</li>
 							<li class="meat">charbroiled or blackened chicken</li>
@@ -172,6 +175,9 @@
 					</li>
 				</ul>
 			</div>
+			<footer class="bottom">
+				<h5>Address</h5>
+			</footer>
 		</div> 
 		<script src="../common/jquery-1.6.2.min.js"></script>
 		<script src="scripts/my_scripts.js"></script>
