modify random target position check and change css style

--- a/ch07/index.html
+++ b/ch07/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<title></title> 
+		<title>Monster Mash</title> 
 		<link type="text/css" href="styles/my_style.css" rel="stylesheet" />
 	</head>
 	<body> 
@@ -11,7 +11,6 @@
 			<button id="btnReset">Reset</button>
 			<p>Make your own monster face by clicking on the picture.</p>
 		</header>
-
 		<div id="container">
 			<img class="lightning" id="lightning1" src='images/lightning-01.jpg' />
 			<img class="lightning" id="lightning2" src='images/lightning-02.jpg' />
